--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.6.0",
     "@tanstack/react-table": "^8.21.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@faker-js/faker": "^9.6.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
