--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@faker-js/faker": "^9.6.0",
     "@tanstack/react-table": "^8.21.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
